// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should fire onToggle event when changing tab 1`] = `
<div>
  <div
    class="junipero tabs"
  >
    <ul
      class="titles"
    >
      <li
        class="title"
      >
        <a
          href="#"
        >
          Tab 1
        </a>
      </li>
      <li
        class="title active"
      >
        <a
          href="#"
        >
          Tab 2
        </a>
      </li>
    </ul>
    <div
      class="content"
    >
      <div
        class="tab"
      >
        Two
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render 1`] = `
<div>
  <div
    class="junipero tabs"
  >
    <ul
      class="titles"
    >
      <li
        class="title active"
      >
        <a
          href="#"
        >
          Tab 1
        </a>
      </li>
    </ul>
    <div
      class="content"
    >
      <div
        class="tab"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> shouldn't change active tab if tab is disabled 1`] = `
<div>
  <div
    class="junipero tabs"
  >
    <ul
      class="titles"
    >
      <li
        class="title active"
      >
        <a
          href="#"
        >
          Tab 1
        </a>
      </li>
      <li
        class="title disabled"
      >
        <a
          href="#"
        >
          Tab 2
        </a>
      </li>
    </ul>
    <div
      class="content"
    >
      <div
        class="tab"
      >
        One
      </div>
    </div>
  </div>
</div>
`;
